--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                <label for="drop">AÑO 2021</label>
                <input type="ceckbox" id="drop/">
                <ul class="menu">
-               	   <li><a href="Primer periodo.html" >Primer periodo</a></li>
-               	   <li><a href="Segundo periodo.html">Segundo periodo</a></li>
-               	   <li><a href="Tercer periodo.html">Tercer periodo</a></li>
-                   <li><a href="Cuarto periodo.html">Cuarto periodo</li>
+               	   <li><a href="Primer periodo.html" >Periodos/Primer periodo</a></li>
+               	   <li><a href="Segundo periodo.html">Periodos/Segundo periodo</a></li>
+               	   <li><a href="Tercer periodo.html">Periodos/Tercer periodo</a></li>
+                   <li><a href="Cuarto periodo.html">Periodos/Cuarto periodo</li>
              
                </ul>
    			</nav>
