--- a/Periodos/Segundo periodo.html
+++ b/Periodos/Segundo periodo.html
@@ -9,7 +9,7 @@
 </header>
 	<title>Segundo peridodo</title>
 	<center>
-	<a href="index.html">Inicio</a>
+	<a href="..//index.html">Inicio</a>
 </head>
 <body>
 
