--- a/Periodos/Tercer periodo.html
+++ b/Periodos/Tercer periodo.html
@@ -9,7 +9,7 @@
 </header>
 	<title>Tercer periodo</title>
 	<center>
-	<a href="index.html">Inicio</a>
+	<a href="..//index.html">Inicio</a>
 </head>
 <body>
 
