--- a/Periodos/Primer periodo.html
+++ b/Periodos/Primer periodo.html
@@ -6,8 +6,12 @@
 	</header>
     </h1>
 		<title>
-		Prime periodo
+		Primer periodo
 	</title>
 	<a href="..//index.html">Inicio</a>
+<br>
+<br>
+<br>
+<a href="//..parcial.html">PARCIAL</a>
 </body>
 </html>
