--- a/Periodos/Primer periodo.html
+++ b/Periodos/Primer periodo.html
@@ -12,6 +12,8 @@
 <br>
 <br>
 <br>
-<a href="../parcial.html">PARCIAL</a>
+	<h1>PARCIAL:</h1>
+	<img src="1.png">
+	<img src="2.png">
 </body>
 </html>
