--- a/Periodos/Primer periodo.html
+++ b/Periodos/Primer periodo.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+		<meta charset="utf-8">
 	<h1>
 	<header><center>Primer periodo</center>
 	</header>
@@ -10,7 +11,7 @@
 	</title>
 	<a href="..//index.html">Inicio</a>
 	<h1>ANIMACIÓN</h1>
-	<video src="">animación.mp4 controls</video>
+	<video src="animación.mp4" controls></video>
 <br>
 <br>
 <br>
