--- a/Periodos/Primer periodo.html
+++ b/Periodos/Primer periodo.html
@@ -11,7 +11,7 @@
 	</title>
 	<a href="..//index.html">Inicio</a>
 	<h1>ANIMACIÓN</h1>
-	<video src="animación.mp4" controls></video>
+	<video src="animación.mp4" controls width="500px" height="500px"></video>
 <br>
 <br>
 <br>
