--- a/Periodos/Primer periodo.html
+++ b/Periodos/Primer periodo.html
@@ -18,7 +18,7 @@
 	<h1>PARCIAL:</h1>
 	<img src="1.png">
 	<img src="2.png">
-	<h2>Tienda:/h2>
-	<img src="../tienda.png"
+	<h2>Tienda:</h2>
+	<img src="../tienda.PNG"
 </body>
 </html>
