--- a/Periodos/Primer periodo.html
+++ b/Periodos/Primer periodo.html
@@ -21,6 +21,8 @@
 	<h2>Tienda:</h2>
 	<img src="../tienda.PNG"
 	     <img src="../tiendx.PNG"
-	<img src="FINAL.png"
+	<h1>FINAL<h1>
+		<div><img src="FINAL.png"</div>
+	
 </body>
 </html>
