--- a/Periodos/Primer periodo.html
+++ b/Periodos/Primer periodo.html
@@ -22,7 +22,7 @@
 	<img src="../tienda.PNG"
 	     <img src="../tiendx.PNG"
 	<h1>FINAL<h1>
-	<img src="final.png">
+	<img src="../final.png">
 	
 </body>
 </html>
