--- a/Periodos/Segundo periodo.html
+++ b/Periodos/Segundo periodo.html
@@ -10,6 +10,8 @@
 	<title>Segundo peridodo</title>
 	<center>
 	<a href="..//index.html">Inicio</a>
+		<h2>Actividad 1 c++:</h2>
+		<img src="../img">
 </head>
 <body>
 
