--- a/Periodos/Segundo periodo.html
+++ b/Periodos/Segundo periodo.html
@@ -11,7 +11,7 @@
 	<center>
 	<a href="..//index.html">Inicio</a>
 		<h2>Actividad 1 c++:</h2>
-		<img src="../img">
+		<img src="../img.png">
 </head>
 <body>
 
