--- a/Periodos/Segundo periodo.html
+++ b/Periodos/Segundo periodo.html
@@ -12,6 +12,8 @@
 	<a href="..//index.html">Inicio</a>
 		<h1>Actividad 1 c++:</h1>
 		<img src="3.png">
+		<a href="tarea2.html">Tarea 2</a>
+
 		
 </head>
 <body>
