--- a/Periodos/tarea2.html
+++ b/Periodos/tarea2.html
@@ -6,7 +6,7 @@
 	<h1>Tarea #2</h1>
 </head>
 <body>
-	<img src="tarea2.png">
+	<img src="../tarea2.png">
 	<p>En lo personal creo que fue bastante fácil porque el profesor se esforzó en lograr que entendiéramos todos los temas</p>
 </body>
 </html>
