--- a/Periodos/Segundo periodo.html
+++ b/Periodos/Segundo periodo.html
@@ -12,7 +12,7 @@
 	<a href="..//index.html">Inicio</a>
 		<h1>Actividad 1 c++:</h1>
 		<img src="3.png">
-		<a href="tarea2.html">Tarea 2</a>
+		<center><a href="tarea2.html">TAREA #2</a></center>
 
 		
 </head>
