--- a/Periodos/Segundo periodo.html
+++ b/Periodos/Segundo periodo.html
@@ -12,7 +12,9 @@
 	<a href="..//index.html">Inicio</a>
 		<h1>Actividad 1 c++:</h1>
 		<img src="3.png">
-		<center><a href="tarea2.html">TAREA #2</a></center>
+		<center><a href="tarea2.html" 
+		class="tag-cloud-link tag-link-34 tag-link-position-1" 
+			   style="font-size: 1em;">TAREA #2</a></center>
 
 		
 </head>
