--- a/Periodos/tarea.html
+++ b/Periodos/tarea.html
@@ -38,7 +38,7 @@
 			height: 0px;
 			width: 950px;
 			border: 2px solid #7bf8ff ;
-			background: url(logo.png);
+			background: url(..//logo.png);
 			transition: 2s all;
 			z-index: 20;
 		}
