--- a/Periodos/Cuarto periodo.html
+++ b/Periodos/Cuarto periodo.html
@@ -35,6 +35,18 @@
 			text-decoration: none;
 
 		}
+		.m:link{
+			color: white;
+			text-decoration: none;
+		}
+		.c{
+			position: absolute;
+			top: 350px;
+			background:mediumaquamarine;
+			height: 100px;
+			width: 400px;
+			font-size: 80px;
+		}
 	</style>	
 		<h1>
 		Cuarto periodo
@@ -43,6 +55,7 @@
 	<title>Cuarto periodo</title>
 		<div class="s"><a href="..//index.html">Inicio</a></div>
 		<div class="d"><a class="l" href="tarea.html">Tarea #1</a></div>
+		<div class="c"><a  class="m" href="actividad2.html">Tarea #2</a></div>
 </head>
 <body>
 
