--- a/Periodos/Cuarto periodo.html
+++ b/Periodos/Cuarto periodo.html
@@ -3,14 +3,25 @@
 <head>
 <header>
 	<style>
-		.s{
+	@font-face{
+		font-family: lol;
+		src: url(buckerley.woff);
+	}
+	*{
+		font-family: lol;
+		font-size: 40px;
+
+	}
+		.m{
+			position: absolute;
+			top: 80px;
 			background:mediumaquamarine;
 			height: 100px;
 			width: 400px;
 			font-size: 80px;
 			 
 		}
-		.s:hover{
+		.m:hover{
 			background:mediumaquamarine;
 			opacity:0.6;
 		}
@@ -18,15 +29,16 @@
 			color: white;
 			text-decoration: none;
 		}
-		.d{
+		.n{
 			position: absolute;
 			top: 200px;
+			left: 8px;
 			background:mediumaquamarine;
 			height: 100px;
 			width: 400px;
 			font-size: 80px;
 		}
-		.d:hover{
+		.n:hover{
 			background:mediumaquamarine;
 			opacity:0.6;
 		}
@@ -35,17 +47,36 @@
 			text-decoration: none;
 
 		}
-		.m:link{
+		.c:link{
 			color: white;
 			text-decoration: none;
 		}
 		.c{
 			position: absolute;
 			top: 350px;
+			left: 8px;
 			background:mediumaquamarine;
 			height: 100px;
 			width: 400px;
 			font-size: 80px;
+		}
+		.c:hover{
+			background:mediumaquamarine;
+			opacity:0.6;
+
+		}
+		.o{
+			position: absolute;
+			top: 500px;
+			left: 8px;
+			background:mediumaquamarine;
+			height: 100px;
+			width: 400px;
+			font-size: 80px;
+		}
+		.o:hover{
+		background:mediumaquamarine;
+		opacity:0.6;	
 		}
 	</style>	
 		<h1>
@@ -53,9 +84,10 @@
 	</h1>
 </header>
 	<title>Cuarto periodo</title>
-		<div class="s"><a href="..//index.html">Inicio</a></div>
-		<div class="d"><a class="l" href="tarea.html">Tarea #1</a></div>
-		<div class="c"><a  class="m" href="actividad2.html">Tarea #2</a></div>
+		<a class="m" href="..//index.html">Inicio</a>
+		<a class="n" href="tarea.html">Tarea #1</a>
+		<a class="c" href="actividad2.html">Tarea #2</a>
+		<a  class="o" href="Tarea3.html">Tarea #3</a>
 </head>
 <body>
 
